perf(tests): maven-surefire-plugin: configuration is changed to avoid infinite timeouts for test runs. Tests argline: timeouts for mongo connections are added.